welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:1: error: Missing closing brace `}' assumed here
override def run() {diagonale()
^Diagonal:1: error: expected start of definition
override def run() {diagonale()
         ^Diagonal:4: error: expected class or object definition
def diagonale(){
^